test: fix config when test fd read write.